# Python-Demo-One

./: pyproject.toml
.github/workflows/: python-app.yml  run_python_linter.sh  run_python_pytest.sh
docs/: README.md  git hooks.md  python starter repo.md
docs/assets/git hooks script/: pre-commit  prepare-commit-msg
