[tool.poetry]
name = "python-starter-repo"
version = "0.1.0"
description = ""
authors = ["Soliton"]
readme = "README.md"
packages = [{include = "python-starter-repo"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
pylint = "^2.17.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
